--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "t-component": "*"
   },
   "devDependencies": {
+    "istanbul": "*",
     "mocha": "*",
     "should": "*",
-    "jscoverage": "*",
     "coveralls": "*",
-    "mocha-lcov-reporter": "*"
+    "jshint": "*"
   },
   "scripts": {
-    "test": "make test && make test-coveralls"
+    "test": "make test-coveralls"
   },
   "repository": "git://github.com/Swatinem/t.git",
   "license": "LGPLv3"
